--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "proxy": "https://kr.api.riotgames.com"
+    "proxy": "http://localhost:8080"
   }
 }
