--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "proxy": "http://localhost:8080"
+    "proxy": [
+      "http://localhost:8080",
+      "http://localhost:3000"
+    ]
   }
 }
